# TouchscreenLEDControl

./: CMakeLists.txt  LICENSE  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/display_drivers/: display_driver.h
components/wifi_manager/: CMakeLists.txt  weather_info.c
components/wifi_manager/include/: wifi_manager.h
led_controller/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
led_controller/components/esp_now_driver/: CMakeLists.txt  esp_now_driver.c
led_controller/components/esp_now_driver/include/: esp_now_driver.h
led_controller/components/led_drivers/: CMakeLists.txt  README.md  led_driver.h
led_controller/main/: CMakeLists.txt  main.c
main/: CMakeLists.txt  globals.c  globals.h  idf_component.yml  main.c
main/pages/: brightness.h  home.h  screen_manager.h
main/pages/fonts/: montserrat_48_cut.c
main/pages/src/: brightness.c  home.c  mode.c
ui_controller/: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
ui_controller/components/: lv_conf.h
ui_controller/components/display_drivers/: CMakeLists.txt  README.md  display_driver.h
ui_controller/components/esp_now_driver/: Kconfig.projbuild
ui_controller/components/wifi_manager/: CMakeLists.txt  Kconfig.projbuild  wifi_info_template.h  wifi_manager.c
ui_controller/main/: CMakeLists.txt  globals.c  idf_component.yml  main.c
ui_controller/main/pages/: home.h  mode.h
ui_controller/main/pages/fonts/: montserrat_36_cut.c
ui_controller/main/pages/src/: screen_manager.c
(+4 files in other folders)
